# train-times

./: .gitignore  Dockerfile  docker-compose.yml
.github/workflows/: backend.yml  build.yml  frontend.yml
backend/: .flake8  mypy.ini  pyproject.toml
backend/tests/: test_timetableSort.py
backend/tests/resources/: __init__.py  timetable-midnight-clj.json  timetable-midnight-lbg.json  timetable-simple-clj.json  timetable-simple-lbg.json
backend/tests/resources/combined/: timetable-simple.json
backend/tests/resources/sorted/: timetable-midnight-clj.json  timetable-midnight-lbg.json  timetable-simple-clj.json  timetable-simple-lbg.json
backend/traintimes/: app.py  models.py  timetable.py
frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/auto-refresh/: auto-refresh.component.css  auto-refresh.component.html  auto-refresh.component.ts
frontend/src/app/services/: departure-model.ts  timetable.service.ts
frontend/src/app/timetable-row/: timetable-row.component.css  timetable-row.component.html  timetable-row.component.spec.ts  timetable-row.component.ts
frontend/src/environments/: environment.prod.ts  environment.ts
nginx/: nginx.conf
